2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-18  Bruno Haible  <haible@clisp.cons.org>

	* po.c (po_callback_message): Don't call iconv_open when the
	OLD_PO_FILE_INPUT environment variable is set.
	* write-po.c (wrap): Don't call iconv_open when the OLD_PO_FILE_OUTPUT
	environment variable is set.

2001-04-09  Bruno Haible  <haible@clisp.cons.org>

	* po.c: Include mbswidth.h.
	(program_name): New declaration.
	(multiline_warning): New function.
	(po_callback_message): Change messages again. Call multiline_warning
	instead of error.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* gettext.c (program_name): Change type to 'const char *'.
	* ngettext.c (program_name): Likewise.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* write-po.c (wrap): Prohibit line breaks inside backslash escape
	sequences.

2001-03-29  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.36 released.

2001-03-27  Bruno Haible  <haible@clisp.cons.org>

	* po.c (po_callback_message): Change message again.

2001-03-26  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (test_whether_c_format): Recognize '%%' as valid.
	* msgfmt.c (check_pair): In error message, count format
	specifications starting from 1, not 0.

2001-03-25  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (warn_id_len): Remove unused variable.
	(main): Don't set it. 'l' option becomes a nop.
	(usage): Remove mention of --string-limits/-l.

2001-03-23  Bruno Haible  <haible@clisp.cons.org>

	* msgcomm.c (main): Don't give an error message if there are "too few"
	messages in the input files. Do sanity checking before reading the
	input files. Make --add-location the default, even if --omit-header
	is specified.

2001-03-22  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (construct_header): Replace ENCODING with 8-bit.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* po.c (po_callback_message): Change message, refer to GNU libiconv.
