@@ -106,8 +106,7 @@ struct po_method_ty
    etc.  */
 
 #define PO_BASE_TY \
-  po_method_ty *method; \
-  int next_is_fuzzy;
+  po_method_ty *method;
 
 typedef struct po_ty po_ty;
 struct po_ty
